<!--
  ~ Copyright (c) 2017.
  ~
  ~ JAWN is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">JAWN</string>
    <string name="label_hourlyforecast">Hourly Forecast</string>
    <string name="button_add_notification">Add Notification</string>
    <string name="activity_add_notification">Add Notification</string>
    <string name="pick_time">Pick Time</string>
    <string name="connection_error">Problem downloading weather</string>
    <string name="label_postalcode">Zip Code</string>
    <string name="label_time">Time</string>
    <string name="label_day_of_week">Days of Week</string>
    <string name="label_dayofweek_sunday">Sunday</string>
    <string name="label_dayofweek_monday">Monday</string>
    <string name="label_dayofweek_tuesday">Tuesday</string>
    <string name="label_dayofweek_wednesday">Wednesday</string>
    <string name="label_dayofweek_thursday">Thursday</string>
    <string name="label_dayofweek_friday">Friday</string>
    <string name="label_dayofweek_saturday">Saturday</string>
    <string name="label_enabled">Enabled</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="title_activity_view_hourly_forecast">ViewHourlyForecastActivity</string>
    <string name="preference_lastnotificationid">LastNotificationId</string>
    <string name="preference_jawnnotifier">JAWNNotifier</string>
    <string name="preference_tokenid">JAWNTokenId</string>

    <string name="desc_google_icon">Google Logo</string>
    <string name="google_signin">Google Sign-In\nQuickstart</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="loading">Loading…</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="server_client_id">553947772785-ri5eps9c8sk2g10mab2jqt66oq3o9d0h.apps.googleusercontent.com</string>
</resources>
