<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017.
  ~
  ~ JAWN is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_notifier"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miryor.jawn.AddNotifierActivity"
    android:label="@string/activity_add_notification"
    android:stretchColumns="1">

    <TableRow>
        <TextView android:id="@+id/label_postalcode"
            android:layout_width="wrap_content"
            android:text="@string/label_postalcode"
            android:gravity="center"
            />

        <EditText android:id="@+id/notifier_postalcode"
            android:layout_width="match_parent" />
    </TableRow>

    <TableRow>
        <TextView android:id="@+id/label_time"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:text="@string/label_time"
            />
        <TextView android:id="@+id/notifier_time"
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="00:00"
            />

        <Button android:id="@+id/button_pick_time"
            android:layout_width="wrap_content"
            android:text="@string/pick_time"
            android:onClick="showTimePickerDialog"
            android:layout_alignParentLeft="true"
            />

    </TableRow>

    <TableRow>
        <TextView android:id="@+id/label_day_of_week"
            android:layout_width="wrap_content"
            android:text="@string/label_day_of_week"
            android:gravity="center"
            />
        <include layout="@layout/day_of_week" />
    </TableRow>

    <TableRow>
        <FrameLayout></FrameLayout>
        <Button android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:text="@string/button_cancel"
            android:onClick="cancelNotifier"
            android:layout_alignParentRight="true"
            />
        <Button android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:text="@string/button_save"
            android:onClick="saveNotifier"
            android:layout_alignParentLeft="true"
            />
    </TableRow>

</TableLayout>
